--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trad-client",
   "version": "0.0.1",
   "description": "An admin interface to translate stuff",
+  "browser": "dist/index.html",
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html --no-scope-hoist"
@@ -10,17 +11,22 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-commonjs": "^15.0.0",
     "@types/node": "^14.0.27",
     "@types/webpack-env": "^1.15.2",
     "babel-preset-solid": "^0.18.14",
     "graphql": "^15.3.0",
-    "parcel": "nightly",
+    "parcel": "^2.0.0-nightly.370",
+    "rollup-plugin-terser": "^7.0.0",
     "tailwindcss": "^1.6.2"
   },
   "dependencies": {
     "@amoutonbrady/solid-heroicons": "^0.0.5",
+    "@rollup/plugin-babel": "^5.2.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@rturnq/solid-router": "^0.1.3",
     "graphql-request": "^3.0.0",
+    "rollup": "^2.26.3",
     "solid-js": "^0.18.14"
   }
 }
