--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An admin interface to translate stuff",
   "browser": "dist/index.html",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html --no-scope-hoist"
+    "dev": "cross-env RANDOM_ENV=development parcel index.html",
+    "build": "ross-env RANDOM_ENV=production parcel build index.html --no-scope-hoist"
   },
   "license": "ISC",
   "devDependencies": {
@@ -14,19 +14,20 @@
     "@rollup/plugin-commonjs": "^15.0.0",
     "@types/node": "^14.0.27",
     "@types/webpack-env": "^1.15.2",
-    "babel-preset-solid": "^0.18.14",
+    "babel-preset-solid": "^0.19.0-beta.0",
+    "cross-env": "^7.0.2",
     "graphql": "^15.3.0",
     "parcel": "^2.0.0-nightly.370",
     "rollup-plugin-terser": "^7.0.0",
     "tailwindcss": "^1.6.2"
   },
   "dependencies": {
-    "@amoutonbrady/solid-heroicons": "^0.0.5",
+    "@amoutonbrady/solid-heroicons": "^0.1.1",
     "@rollup/plugin-babel": "^5.2.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rturnq/solid-router": "^0.1.3",
     "graphql-request": "^3.0.0",
     "rollup": "^2.26.3",
-    "solid-js": "^0.18.14"
+    "solid-js": "^0.19.0-beta.0"
   }
 }
