--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "browser": "dist/index.html",
   "scripts": {
     "dev": "cross-env RANDOM_ENV=development parcel index.html",
-    "build": "ross-env RANDOM_ENV=production parcel build index.html --no-scope-hoist"
+    "build": "cross-env RANDOM_ENV=production && cross-env PARCEL_BUNDLE_ANALYZER=1 parcel build index.html",
+    "format": "prettier --write src/**/*.{js,ts,tsx,json,md,html,css}"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-typescript": "^7.10.4",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@types/node": "^14.0.27",
-    "@types/webpack-env": "^1.15.2",
-    "babel-preset-solid": "^0.19.0-beta.0",
-    "cross-env": "^7.0.2",
-    "graphql": "^15.3.0",
-    "parcel": "^2.0.0-nightly.370",
-    "rollup-plugin-terser": "^7.0.0",
-    "tailwindcss": "^1.6.2"
+    "@babel/core": "7.11.4",
+    "@babel/preset-typescript": "7.10.4",
+    "@rollup/plugin-commonjs": "15.0.0",
+    "@types/node": "14.6.0",
+    "@types/webpack-env": "1.15.2",
+    "babel-preset-solid": "0.18.14",
+    "cross-env": "7.0.2",
+    "graphql": "15.3.0",
+    "parcel": "2.0.0-nightly.377",
+    "prettier": "2.0.5",
+    "rollup-plugin-terser": "7.0.0",
+    "tailwindcss": "1.7.3"
   },
   "dependencies": {
-    "@amoutonbrady/solid-heroicons": "^0.1.1",
-    "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rturnq/solid-router": "^0.1.3",
-    "graphql-request": "^3.0.0",
-    "rollup": "^2.26.3",
-    "solid-js": "^0.19.0-beta.0"
+    "@amoutonbrady/solid-heroicons": "0.1.1",
+    "@rollup/plugin-babel": "5.2.0",
+    "@rollup/plugin-node-resolve": "9.0.0",
+    "@rturnq/solid-router": "0.1.5",
+    "graphql-request": "3.0.0",
+    "rollup": "2.26.5",
+    "solid-js": "0.18.14"
   }
 }
