--- a/package.json
+++ b/package.json
@@ -4,32 +4,35 @@
   "description": "An admin interface to translate stuff",
   "browser": "dist/index.html",
   "scripts": {
-    "dev": "cross-env RANDOM_ENV=development parcel index.html",
-    "build": "cross-env RANDOM_ENV=production && cross-env PARCEL_BUNDLE_ANALYZER=1 parcel build index.html",
+    "dev": "parcel index.html",
+    "build": "parcel build index.html",
     "format": "prettier --write src/**/*.{js,ts,tsx,json,md,html,css}"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/preset-typescript": "7.10.4",
-    "@rollup/plugin-commonjs": "15.0.0",
-    "@types/node": "14.6.0",
-    "@types/webpack-env": "1.15.2",
-    "babel-preset-solid": "0.18.14",
-    "cross-env": "7.0.2",
+    "@babel/core": "7.12.10",
+    "@babel/preset-typescript": "7.12.7",
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@types/node": "14.14.12",
+    "@types/webpack-env": "1.16.0",
+    "babel-preset-solid": "0.23.0",
+    "cross-env": "7.0.3",
     "graphql": "15.3.0",
-    "parcel": "2.0.0-nightly.377",
-    "prettier": "2.0.5",
-    "rollup-plugin-terser": "7.0.0",
-    "tailwindcss": "1.7.3"
+    "parcel": "2.0.0-nightly.476",
+    "postcss": "^8.2.1",
+    "prettier": "2.2.1",
+    "rollup-plugin-terser": "7.0.2",
+    "tailwindcss": "2.0.2"
   },
   "dependencies": {
-    "@amoutonbrady/solid-heroicons": "0.1.1",
-    "@rollup/plugin-babel": "5.2.0",
-    "@rollup/plugin-node-resolve": "9.0.0",
-    "@rturnq/solid-router": "0.1.5",
+    "@amoutonbrady/solid-heroicons": "0.5.0",
+    "@rollup/plugin-babel": "5.2.2",
+    "@rollup/plugin-node-resolve": "11.0.0",
+    "@rturnq/solid-router": "0.2.1",
     "graphql-request": "3.0.0",
-    "rollup": "2.26.5",
-    "solid-js": "0.18.14"
+    "redaxios": "^0.3.0",
+    "rollup": "2.34.2",
+    "solid-js": "0.23.2"
   }
 }
